force-app/main/default/objects/OpportunityCompetitor__c/OpportunityCompetitor__c.object-meta.xml
<CustomObject>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Opportunity Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>