force-app/main/default/objects/OpportunityCompetitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competitor objet related to detail relationship</description>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Competitor__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Only active competitors are displayed.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunity Competitor</relationshipLabel>
    <relationshipName>OpportunityCompetitor</relationshipName>
    <type>Lookup</type>
</CustomField>