force-app/main/default/objects/OpportunityCompetitor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>master detailed relationship between opportunity and opportunity competitor</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Competitor</relationshipLabel>
    <relationshipName>OpportunityCompetitor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>