force-app/main/default/objects/OpportunityCompetitor__c/fields/PrimaryCompetitor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCompetitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary competitor</label>
    <type>Checkbox</type>
</CustomField>