force-app/main/default/objects/OpportunityCompetitor__c/validationRules/OnlyOneMainCompetitor.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneMainCompetitor</fullName>
    <active>true</active>
    <description>Only one main competitor can be selected on an active opportunity</description>
    <errorConditionFormula>AND(
$Permission.ByPassVR = false,
    PrimaryCompetitor__c,
    Opportunity__r.PrimaryCompetitorDefined__c &gt; 0
)</errorConditionFormula>
    <errorMessage>You can only have one main competitor per opportunity.</errorMessage>
</ValidationRule>